<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/edit_event_name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:autofillHints="true"
                android:hint="@string/event_name"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_category" />

            <EditText
                android:id="@+id/edit_event_info"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:autofillHints="true"
                android:hint="@string/info_about_event"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_name" />

            <EditText
                android:id="@+id/edit_event_date"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                android:autofillHints="true"
                android:hint="@string/date_of_event"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/edit_event_category"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:autofillHints="true"
                android:hint="@string/category"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_date" />

            <DatePicker
                android:id="@+id/date_birthday"
                android:layout_width="351dp"
                android:layout_height="440dp"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_info" />

            <Button
                android:id="@+id/butt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:onClick="onClickButtonSave"
                android:text="@string/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_birthday" />

            <Button
                android:id="@+id/butt_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:onClick="onClickButtonRemove"
                android:text="@string/remove"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_birthday" />

            <ImageView
                android:id="@+id/valid_name"
                android:layout_width="39dp"
                android:layout_height="32dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="TODO"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/edit_event_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valid_date"
                app:srcCompat="@android:drawable/checkbox_on_background" />

            <ImageView
                android:id="@+id/valid_info"
                android:layout_width="39dp"
                android:layout_height="32dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="TODO"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/edit_event_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valid_name"
                app:srcCompat="@android:drawable/checkbox_on_background" />

            <ImageView
                android:id="@+id/valid_date"
                android:layout_width="39dp"
                android:layout_height="32dp"
                android:layout_marginStart="3dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="TODO"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/edit_event_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/checkbox_on_background" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="49dp"
                android:layout_height="31dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="20dp"
                android:background="#00000000"
                android:backgroundTint="#00C00F0F"
                android:onClick="onClickButtonNext"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_media_ff" />

            <TextView
                android:id="@+id/text_pos_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="4dp"
                android:text="1/1"
                app:layout_constraintBottom_toTopOf="@+id/imageButton"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="49dp"
                android:layout_height="31dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="#00000000"
                android:backgroundTint="#00C00F0F"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="onClickButtonPrev"
                app:layout_constraintTop_toBottomOf="@+id/imageButton"
                app:srcCompat="@android:drawable/ic_media_rew" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>